--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ body {
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     direction: rtl;
@@ -123,6 +124,8 @@ body {
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     position: relative;
+    background-image: url("imgs/icons/niqap5\ \(2\)\(1\).png");
+    background-image: url("imgs/icons/butterBackReapeat1.png");
 }
 
 .container .form {
@@ -351,11 +354,29 @@ hr {
 
 .container .celever-icon {
     position: absolute;
-    bottom: 0px;
-    width: 90px;
+    bottom: -10px;
+    width: 102px;
+    z-index: 19;
 }
 
-
+.copies {
+    background-color: var(--main-clr);
+    color: white;
+    padding: 6px 16px;
+    border-radius: 3px;
+    border-left: 5px solid;
+    border-right: 5px solid;
+    box-shadow: 0 0 3px 3px var(--main-clr);
+    margin-top: 5px;
+    font-size: 12px;
+    text-align: center;
+    position: relative;
+    z-index: 20;
+    font-weight: 800;
+}
+.copies .l1 {
+    margin-bottom: 5px;
+}
 @media (max-width: 600px) {
     body {
         background-image: url("imgs/backgrounds/smallBck.png");
